♻️重构 SysTenantServiceImpl 租户默认参数获取方式
(cherry picked from commit 612acdcca78bd5053f19ee9d784e1e9beb6ec9d2)